18.2.7-ingress-lb-algorithm/nginx-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-lb-algorithm
  namespace: avi-feature
  labels:
    feature: lb-algorithm 
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: tcp
  selector:
    feature: lb-algorithm
